examples/waypoint/waypoint-gw.yaml
# Deploys a kgateway Waypoint proxy.
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: httpbin-waypoint
  namespace: httpbin
spec:
  gatewayClassName: kgateway-waypoint
  listeners:
  - protocol: istio.io/PROXY
    port: 15088
    name: mesh
    allowedRoutes:
      namespaces:
        from: Same
---
# Route all traffic to Services in the httpbin Namespace
# through the zTunnel, and through the Waypoint.
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: httpbin-waypoint
